--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,19 @@
-body{
+body {
     background-image: url(assets/pexels-byrahul-695644.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     margin: 0;
+    background-color: black;
     /* display: flex;
     justify-content: center;
     min-height: 100vh;
     align-items: center; */
+}
 
+@media (max-width: 768px) {
+    body {
+        background-size: contain;
+    }
 }
